--- a/common/common.scss
+++ b/common/common.scss
@@ -1,1 +1,14 @@
-/* JS is in Body. From Mike Foskett on CodePen https://codepen.io/2kool2/pen/WNVLJNJ */
+a[href][data-ext-icon] svg.ext-icon,
+a[href] svg.ext-icon[data-ext-icon],
+h1 a[href][data-ext-icon] svg.ext-icon,
+h2 a[href][data-ext-icon] svg.ext-icon,
+h3 a[href][data-ext-icon] svg.ext-icon,
+h4 a[href][data-ext-icon] svg.ext-icon,
+h5 a[href][data-ext-icon] svg.ext-icon,
+h6 a[href][data-ext-icon] svg.ext-icon {
+  width: 0.75em;
+  height: 0.75em;
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+  vertical-align: text-top;
+}
