Add comment for external links icon styles

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,5 @@
+/* discourse-external-links-icon/common/common.scss */
+
 a[href][data-ext-icon] svg.ext-icon,
 a[href] svg.ext-icon[data-ext-icon],
 h1 a[href][data-ext-icon] svg.ext-icon,
